# dotfiles

./: .gitignore  .zprofile  .zshenv  .zshrc  README.md  coc-settings.json  config.toml  custom_nvim_commands.vim  dotfiles  init.vim  nvim_init.lua  other_nvim_config.vim  plugin_config.vim  plugins.vim  sync  vimrc  zshrc
NeoVim/: .gitignore  config.lua  custom_nvim_commands.vim  init.lua  init.vim  nvim_init.lua  other_nvim_config.vim  plugin_config.vim  plugins.vim
aerospace/: aerospace.toml
aider/: .aider.conf.yaml  (+2 more)
browser/: README.md  (+1 more)
sketchybar/: Cargo.toml  README.md  bar.lua  build  colors.lua  default.lua  icons.lua  init.lua  settings.lua  sketchybarrc
sketchybar/helpers/: app_icons.lua  default_font.lua  init.lua  makefile  utils.lua
sketchybar/helpers/event_providers/: makefile
sketchybar/helpers/event_providers/gpu_load/: gpu.c  makefile
sketchybar/helpers/event_providers/network_load/: network.h  network_load.c
sketchybar/items/: animator.lua  artemis.lua  battery.lua  battery.sh  bitcoin.sh  btc.sh  clock.lua  clock.sh  cpu.lua  disk.lua  front_app.lua  front_app.sh  gpu.lua  init.lua  media.lua  media.sh  memory.lua  menus.lua  mission_control.lua  mission_control.sh  music.sh  packages.sh  system.sh  volume.sh  vpn.lua  vpn.sh  wifi.lua  wifi.sh
sketchybar/plugins/: battery.sh  bitcoin.sh  clock.sh  cpu.sh  front_app.sh  media.sh  music  music_click  network.sh  package_monitor.sh  toggle_stats.sh  volume.sh  vpn.sh  wifi.sh
sketchybar/src/: battery.rs  clock.rs  cpu.rs  icons.rs  media.rs
sketchybar/utils/: functions.sh  icons.sh
(+169 files in other folders)
