[package]
name = "sketchybar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
chrono = "0.4.29"
redis = "0.23.3"

[[bin]]
name = "clock"
path = "src/clock.rs"

[[bin]]
name = "battery"
path = "src/battery.rs"
