[package]
name = "sketchybar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
chrono = "0.4.29"
redis = "0.23.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sysinfo = "0.29.10"
unicode-segmentation = "1.10.1"

[[bin]]
name = "clock"
path = "src/clock.rs"

[[bin]]
name = "battery"
path = "src/battery.rs"

[[bin]]
name = "media"
path = "src/media.rs"

[[bin]]
name = "cpu"
path = "src/cpu.rs"
